fix: change z-index values to prevent overlapping, make displayName observable return undefined

--- a/src/app/core/components/modal/modal.component.scss
+++ b/src/app/core/components/modal/modal.component.scss
@@ -3,7 +3,7 @@
 }
 
 .modal {
-  z-index: 20;
+  z-index: 1104;
   position: fixed;
   left: 50%;
   top: 40%;
@@ -65,7 +65,7 @@
   padding: 0;
   border: none;
   position: fixed;
-  z-index: 19;
+  z-index: 1103;
   top: 0;
   left: 0;
   width: 100%;
