--- a/src/app/core/components/popover/popover.component.scss
+++ b/src/app/core/components/popover/popover.component.scss
@@ -16,7 +16,7 @@
 }
 
 .popover-content {
-  z-index: 15;
+  z-index: 1103;
   width: 100%;
   position: absolute;
   display: flex;
